tests/syntax_error/varargs_def.jou
def foo(...) -> int:  # Error: functions with variadic arguments cannot be defined yet
    return 0
